# psycho_project

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: adventurer.glb  adventurer_torso.glb  beta.blend1  beta.blend11  beta.glb  casual.glb  main_skeleton.glb  skeleton.glb  skeleton_female.glb  sword.glb
assets/blends/: duel.blend  sword.blend  sword.blend1  sword.blend11
certificates/: cert.pem  generate.sh  key.pem
client/: Cargo.toml
client/assets/characters/: black_cube.glb
client/src/: client.rs  config.rs  lib.rs  main.rs  mod.rs  movement_systems.rs  protocol.rs  resolution_plugin.rs  server.rs  setup_systems.rs  shared.rs
client/src/client/: core_systems.rs  create_char.rs  load_assets.rs  mod.rs
client/src/client/ui/: lobby_screen.rs  main_screen.rs  mod.rs
client/src/form_modular_char/: mod.rs
client/src/form_network/: protocol.rs
client/src/form_player/: lib.rs  mod.rs  setup_entities.rs
client/src/form_ui/: debug_ui.rs  mod.rs
client/src/network_client/: config.rs  setup_systems.rs
client/src/player_mechanics/: keyboard_system.rs
client/src/server/: core_systems.rs  lobby_systems.rs  mod.rs  player_systems.rs  server_systems.rs
client/src/shared/: mod.rs  protocol.rs
client/src/shared/protocol/: lobby_structs.rs  mod.rs  player_structs.rs
client/src/treat_animations/: lib.rs  setup_entities.rs
common/: Cargo.toml
common/src/: app.rs  settings.rs
psycho_project/: Cargo.toml
psycho_project/assets/: settings.ron
psycho_project/assets/characters/adventurer/: farmer_head.glb  space_head.glb
psycho_project/assets/characters/mod_char/: farmer_head.glb
psycho_project/assets/characters/parts/: soldier_head.glb  soldier_legs.glb  soldier_torso.glb  suit_head.glb
psycho_project/src/: main.rs
psycho_project/src/client/: change_res.rs  create_char.rs  essentials.rs  load_assets.rs  manage_game.rs  mod.rs  physical_world.rs  physics_world.rs  rtt.rs  start_game.rs  voxel_gen.rs  world.rs
psycho_project/src/client/form_player/: animations.rs  camera.rs  char_customizer.rs  helpers.rs  mod.rs  rtt.rs  start_game.rs
psycho_project/src/client/player/: animations.rs  camera.rs  char_customizer.rs  client_replicated.rs  gun.rs  mod.rs  physics.rs
psycho_project/src/client/ui/: change_char.rs  inventory_screen.rs  lobby_screen.rs  main_screen.rs  mod.rs  pause_screen.rs
psycho_project/src/server/: client_info.rs  cursor.rs  essentials.rs  lobby.rs  mod.rs  physics_world.rs  player.rs  server_systems.rs  world.rs
psycho_project/src/server/save_files/: player_info.bar
psycho_project/src/shared/: diagnostics.rs  mod.rs  physics.rs  shared_behavior.rs  shared_gun.rs  shared_physics.rs
psycho_project/src/shared/protocol/: lobby_structs.rs  mod.rs  player_structs.rs  weapon_structs.rs  world_structs.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  movement_systems.rs  setup_systems.rs
server/src/network_server/: config.rs
shared/: Cargo.toml
shared/src/: drawn_systems.rs  lib.rs  main.rs  movement_systems.rs  protocol.rs  sockets.rs
shared/src/network_shared/: config.rs  mod.rs
src/: asset_loader_plugin.rs  camera.rs  camera_plugin.rs  client.rs  form_hitbox_plugin.rs  gun.rs  lighting_plugin.rs  load_assets_plugin.rs  load_gltfs_plugin.rs  main.rs  player.rs  player_movement_plugin.rs  player_plugin.rs  resolution.rs  resolution_plugin.rs  shared.rs  treat_animations_plugin.rs  world.rs  world_plugin.rs
src/form_camera/: camera_mechanics.rs  mod.rs  sync_camera.rs
src/form_hitbox/: follow_along.rs  helpers.rs  lib.rs  mod.rs  setup_entities.rs  spawn_hitbox.rs
src/form_hitbox_plugin/: follow_along.rs  helpers.rs  lib.rs  mod.rs  spawn_hitbox.rs
src/form_ingame_camera/: camera_mechanics.rs  mod.rs  setup_entities.rs  sync_camera.rs
src/form_modular_char/: lib.rs  mod.rs  spawn_mod_char.rs
src/form_multiplayer/: client.rs  mod.rs  server.rs  settings.rs
src/form_player/: mod.rs  setup_entities.rs
src/form_ui/: main_menu.rs
src/form_world/: mod.rs  (+2 more)
(+94 files in other folders)
