[package]
name = "psycho_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_rapier3d = "*"
bevy_asset_loader = "0.20"
bevy-inspector-egui = "0.23"
iyes_perf_ui = "0.2"
regex = "*"