[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bevy
bevy = { version = "0.14.2", features = [
  "multi_threaded",
  "bevy_state",
  "serialize",
] }
bevy-inspector-egui = "0.25"
bevy_asset_loader = "0.21"
lightyear = {version = "0.17", features = [
  "steam",
  "webtransport",
  "websocket",
] }


# Utils
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", features = [] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
rand = "0.8"
metrics-exporter-prometheus = { version = "0.15.1", optional = true }

common = {path = "../common"}
