[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["jpeg","multi_threaded","bevy_state","serialize"] }
lightyear = "*"
# Serialize crate
serde = { version = "1.0", features = ["derive"] }

[lib]
path = "src/lib.rs"
